correct markup and css

--- a/index.html
+++ b/index.html
@@ -107,26 +107,35 @@
                 <ul class="team-list list">
                     <li class="team-item">
                         <img src="images/img.jpg" alt="Фото Игорь Демьяненко" class="photo-team" width="270" />
-                        <h3 class="title">Игорь Демьяненко</h3>
-                        <p lang="en" class="text">Product Designer</p>
+                        <div class="team-wrap">
+                            <h3 class="title">Игорь Демьяненко</h3>
+                            <p lang="en" class="text">Product Designer</p>
+                        </div>
                     </li>
 
                     <li class="team-item">
                         <img src="images/img1.jpg" alt="Фото Ольга Репина" class="photo-team" width="270" />
-                        <h3 class="title">Ольга Репина</h3>
-                        <p lang=" en " class="text">Frontend Developer</p>
+                        <div class="team-wrap">
+                            <h3 class="title">Ольга Репина</h3>
+                            <p lang=" en " class="text">Frontend Developer</p>
+                        </div>
+
                     </li>
 
                     <li class="team-item">
                         <img src="images/img2.jpg " alt="Фото Николай Тарасов" class="photo-team" width="270 " />
-                        <h3 class="title">Николай Тарасов</h3>
-                        <p lang="en " class="text">Marketing</p>
+                        <div class="team-wrap">
+                            <h3 class="title">Николай Тарасов</h3>
+                            <p lang="en " class="text">Marketing</p>
+                        </div>
                     </li>
 
                     <li class="team-item">
                         <img src="images/img3.jpg " alt="Фото Михаил Ермаков" class="photo-team" width="270 " />
-                        <h3 class="title">Михаил Ермаков</h3>
-                        <p lang="en " class="text">UI Designer</p>
+                        <div class="team-wrap">
+                            <h3 class="title">Михаил Ермаков</h3>
+                            <p lang="en " class="text">UI Designer</p>
+                        </div>
                     </li>
                 </ul>
             </div>
