--- a/portfolio.html
+++ b/portfolio.html
@@ -70,48 +70,66 @@
                 <ul class="projects list">
                     <li class="projects-item">
                         <img src="./images/portfolio-img-1.jpg" alt="Пример веб-сайта" class="projects-photo" width="370" height="294" />
-                        <h2 class="title">Технокряк</h2>
-                        <p class="text">Веб-сайт</p>
+                        <div class="item-wrap">
+                            <h2 class="title">Технокряк</h2>
+                            <p class="text">Веб-сайт</p>
+                        </div>
                     </li>
                     <li class="projects-item">
                         <img src="./images/portfolio-img-2.jpg" alt="Баскетбольный постер" class="projects-photo" width="370" height="294" />
-                        <h2 class="title">Постер New Orlean vs Golden Star</h2>
-                        <p class="text">Дизайн</p>
+                        <div class="item-wrap">
+                            <h2 class="title">Постер New Orlean vs Golden Star</h2>
+                            <p class="text">Дизайн</p>
+                        </div>
                     </li>
                     <li class="projects-item">
                         <img src="./images/portfolio-img-3.jpg" alt="Лого ресторана Seafood" class="projects-photo" width="370" height="294" />
-                        <h2 class="title">Ресторан Seafood</h2>
-                        <p class="text">Приложение</p>
+                        <div class="item-wrap">
+                            <h2 class="title">Ресторан Seafood</h2>
+                            <p class="text">Приложение</p>
+                        </div>
                     </li>
                     <li class="projects-item">
                         <img src="./images/portfolio-img-4.jpg" alt="Фото наушников" class="projects-photo" width="370" height="294" />
-                        <h2 class="title">Проект Prime</h2>
-                        <p class="text">Маркетинг</p>
+                        <div class="item-wrap">
+                            <h2 class="title">Проект Prime</h2>
+                            <p class="text">Маркетинг</p>
+                        </div>
                     </li>
                     <li class="projects-item">
                         <img src="./images/portfolio-img-5.jpg" alt="Фото коробок" class="projects-photo" width="370" height="294" />
-                        <h2 class="title">Проект Boxes</h2>
-                        <p class="text">Приложение</p>
+                        <div class="item-wrap">
+                            <h2 class="title">Проект Boxes</h2>
+                            <p class="text">Приложение</p>
+                        </div>
                     </li>
                     <li class="projects-item">
                         <img src="./images/portfolio-img-6.jpg" alt="Монитор с открытым сайтом" class="projects-photo" width="370" height="294" />
-                        <h2 class="title">Inspiration has no Borders</h2>
-                        <p class="text">Веб-сайт</p>
+                        <div class="item-wrap">
+                            <h2 class="title">Inspiration has no Borders</h2>
+                            <p class="text">Веб-сайт</p>
+                        </div>
                     </li>
                     <li class="projects-item">
                         <img src="./images/portfolio-img-7.jpg" alt="Фото открытого журнала" class="projects-photo" width="370" height="294" />
-                        <h2 class="title">Издание Limited Edition</h2>
-                        <p class="text">Дизайн</p>
+                        <div class="item-wrap">
+                            <h2 class="title">Издание Limited Edition</h2>
+                            <p class="text">Дизайн</p>
+                        </div>
                     </li>
                     <li class="projects-item">
                         <img src="./images/portfolio-img-8.jpg" alt="Бумажный ценник" class="projects-photo" width="370" height="294" />
-                        <h2 class="title">Проект LAB</h2>
-                        <p class="text">Маркетинг</p>
+                        <div class="item-wrap">
+                            <h2 class="title">Проект LAB</h2>
+                            <p class="text">Маркетинг</p>
+                        </div>
                     </li>
                     <li class="projects-item">
                         <img src="./images/portfolio-img-9.jpg" alt="Мужские руки и ноутбук" class="projects-photo" width="370" height="294" />
-                        <h2 class="title">Growing Business</h2>
-                        <p class="text">Приложение</p>
+                        <div class="item-wrap">
+                            <h2 class="title">Growing Business</h2>
+                            <p class="text">Приложение</p>
+                        </div>
                     </li>
                 </ul>
             </div>
