correct markup and css

--- a/portfolio.html
+++ b/portfolio.html
@@ -147,8 +147,7 @@
 								target="_blank "
 								class="post-address link"
 								rel="noreferrer noopener nofollow "
-							>
-								г. Киев, пр-т Леси Украинки, 26
+								>г. Киев, пр-т Леси Украинки, 26
 							</a>
 						</li>
 						<li class="contacts-item">
