--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
     <main class="main">
         <!-- Section order service -->
         <section class="order-service section">
-            <div class="container"></div>
-            <h1 class="main-title">
-                Эффективные решения
-                <br /> для вашего бизнеса
-            </h1>
-            <button class="btn-primary" type="button">Заказать услугу</button>
+            <div class="container">
+                <h1 class="main-title">
+                    Эффективные решения
+                    <br /> для вашего бизнеса
+                </h1>
+                <button class="btn-primary" type="button">Заказать услугу</button>
             </div>
         </section>
         <!-- Section Features -->
@@ -117,16 +117,15 @@
                         <img src="images/img1.jpg" alt="Фото Ольга Репина" class="photo-team" width="270" />
                         <div class="team-wrap">
                             <h3 class="title">Ольга Репина</h3>
-                            <p lang=" en " class="text">Frontend Developer</p>
+                            <p lang="en" class="text">Frontend Developer</p>
                         </div>
-
                     </li>
 
                     <li class="team-item">
                         <img src="images/img2.jpg " alt="Фото Николай Тарасов" class="photo-team" width="270 " />
                         <div class="team-wrap">
                             <h3 class="title">Николай Тарасов</h3>
-                            <p lang="en " class="text">Marketing</p>
+                            <p lang="en" class="text">Marketing</p>
                         </div>
                     </li>
 
@@ -134,18 +133,17 @@
                         <img src="images/img3.jpg " alt="Фото Михаил Ермаков" class="photo-team" width="270 " />
                         <div class="team-wrap">
                             <h3 class="title">Михаил Ермаков</h3>
-                            <p lang="en " class="text">UI Designer</p>
+                            <p lang="en" class="text">UI Designer</p>
                         </div>
                     </li>
                 </ul>
             </div>
         </section>
-        </div>
     </main>
     <!-- Footer -->
     <footer class="footer">
         <address class="address">
-                <div class="container">
+				<div class="container">
 					<a href="./index.html " class="logo-footer link"> Web<span class="logo-footer-span">Studio</span> </a>
 					<ul class="contacts list">
 						<li class="contacts-item">
@@ -154,8 +152,7 @@
 								target="_blank "
 								class="post-address link"
 								rel="noreferrer noopener nofollow "
-							>
-								г. Киев, пр-т Леси Украинки, 26
+								>г. Киев, пр-т Леси Украинки, 26
 							</a>
 						</li>
 						<li class="contacts-item">
@@ -165,8 +162,8 @@
 							<a href="tel:+380961111111 " class="contact-item-link link">+38 096 111 11 11</a>
 						</li>
 					</ul>
-                </div>
-		</address>
+				</div>
+			</address>
     </footer>
 </body>
 
